# sigstore-verifier-cpp

./: CMakeLists.txt  README.md  TODO.md
.github/workflows/: build.yml  codeql-analysis.yml
cmake/: SigstoreVerifierConfig.cmake.in
cmake/modules/: embed_file_generator.cmake  generate_embedded_file.cmake
include/sigstore/: Bundle.hh  Certificate.hh  Context.hh  Errors.hh  SigstoreErrors.hh  SigstoreVerifier.hh
src/: Base64.cc  Base64.hh  Bundle.cc  BundleHelper.cc  BundleHelper.hh  BundleImpl.cc  BundleImpl.hh  BundleLoader.cc  BundleLoader.hh  CMakeLists.txt  CanonicalBodyParser.cc  CanonicalBodyParser.hh  Certificate.cc  Certificate.hh  CertificateStore.cc  CertificateStore.hh  CheckpointParser.cc  CheckpointParser.hh  Context.cc  ContextImpl.cc  ContextImpl.hh  CryptographicAlgorithms.cc  CryptographicAlgorithms.hh  Errors.cc  Logging.cc  Logging.hh  MerkleTreeValidator.cc  MerkleTreeValidator.hh  OnlineTransparencyLogLoader.cc  OnlineTransparencyLogLoader.hh  PublicKey.cc  PublicKey.hh  RFC6962Hasher.cc  RFC6962Hasher.hh  SigstoreErrors.cc  SigstoreVerifier.cc  TransparencyLogLoader.cc  TransparencyLogLoader.hh  TransparencyLogVerifier.cc  TransparencyLogVerifier.hh
test/: BundleHelperTest.cc  BundleLoaderTest.cc  BundleTest.cc  CMakeLists.txt  CanonicalBodyParserTest.cc  CertificateStoreTest.cc  CertificateTest.cc  CheckpointParserTest.cc  OnlineTransparencyLogLoaderTest.cc  PublicKeyTest.cc  RFC6962HasherTest.cc  SigstoreTest.cc  TestUtils.hh  TransparencyLogLoaderTest.cc  TransparencyLogVerifierTest.cc
test/data/: appcast-sigstore.xml.sigstore.json  body.json  corrupted.json  tlog.json
